<resources>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_beacons_scan" translatable="false">BeaconsScanActivity</string>
    <string name="app_name" translatable="false">Beacons Scanner</string>


    <!-- IBEACON -->
    <string name="device_name">Name</string>
    <string name="proximity_uuid">Proximity UUID</string>
    <string name="battery">Battery</string>
    <string name="distance">Distance</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="beacon_unique_id">Beacon Id</string>
    <string name="rssi">Rssi</string>
    <string name="power">Tx Power</string>
    <string name="proximity">Proximity:</string>


    <!-- EDDYSTONE -->
    <string name="namespace">Namespace</string>
    <string name="instance">Instance</string>
    <string name="url">Url:</string>
    <string name="data_rate">Data Rate:</string>

    <string name="tx_power_level">Power: </string>
    <string name="battery_voltage">Battery</string>

    <string name="save_log_file">Save logs to file</string>
    <string name="stop_save_log_file">Stop saving logs to file</string>

    <string name="mark_log_file">Click when near the beacon</string>
    <string name="stop_mark_log_file">Click when moving away from the beacon</string>

    <string name="text_about_us">Hi there, we are computer engineering master\'s students working on our master thesis. It studies BLE and its potential.
        \n\nWe developed this app to detect BLE beacons and based on the RSSI value that they transmit we can calculate the distance from our device to the beacon.
        We use some techniques to smooth the signal and therefore get a more accurate distance.
        The idea of this app is to share our work and try to get some feedback from you so that we can improve our algorithms.
        \n\nYou can contact us through the email announced in the main menu or using the option \'Contact Us\'.
        \n\n\n<i>Thank you for installing our app.</i></string>
    <string name="text_content_main">Press the button to start scanning</string>
    <string name="immediate">Immediate</string>
    <string name="near">Near</string>
    <string name="far">Far</string>
    <string name="calibrating">calibrating</string>
    <string name="suavizedRssi">Suavized Rssi</string>
    <string name="receivedRssi">Received Rssi</string>

    <!-- Menu -->
    <string name="scan_beacons">Scan Beacons</string>
    <string name="noSignal">no signal</string>
    <string name="communicate">Communicate</string>
    <string name="shareapp">Share App</string>
    <string name="comment">Comment App</string>
    <string name="sendmail">Contact Us</string>
    <string name="aboutus">About Us</string>
    <string name="reportdata">Report Data</string>
    <string name="tutorial">See Intro</string>

    <!-- Alert -->
    <string name="fileSelectCsv">Please select .csv file from Beacons Scanner folder</string>
    <string name="fileSavedEddystone">Log file saved to folder Beacons Scanner/Eddystone/</string>
    <string name="fileSavedIbeacon">Log file saved to folder Beacons Scanner/IBeacon/</string>
    <string name="folderEmpty">Log folder is empty. First create log files</string>
    <string name="fileSavingEddystoneChart">Saving file to folder Beacons Scanner/Eddystone.</string>
    <string name="fileSavingIbeaconChart">Saving file to folder Beacons Scanner/IBeacon.</string>

    <!-- Permissions -->
    <string name="needsBluetoothPermissions">This app needs location access</string>
    <string name="bluetoothPermissions">Please grant location access so this app can detect beacons.</string>
    <string name="noBluetoothPermissions">Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>
    <string name="limitedPermissions">Functionality limited</string>
    <string name="needsStoragePermissions">This app needs storage access</string>
    <string name="storagePermissions">Please grant storage access so this app can create log files about the beacons.</string>
    <string name="noStoragePermissions">Since storage access has not been granted, this app will not be able to create log files with information about the received RSSI and distance from the beacons.</string>
    <string name="shareAppText">Hey, download this app! </string>
    <string name="appLink" translatable="false">https://play.google.com/store/apps/details?id=com.northteam.beaconsscanner</string>

    <!-- Tutorial -->
    <string name="tutorialMain">This intro will guide you through the features of this app</string>
    <string name="tutorialApp">Scan and detect nearby beacons (both Eddystone and iBeacon) and show their details</string>
    <string name="tutorialChart">Chart</string>
    <string name="tutorialSeeChart">chart ...</string>
    <string name="tutorialLogs">Save logs about the received signals from your beacons</string>
    <string name="tutorialFolder">A folder with the name of the app was created on the root directory of your device</string>
    <string name="tutorialSaveFile">Every time you click Save log to a file, a .csv file is created in the corresponding folder.
        \nThe file is named with the timestamp of its creation</string>
    <string name="tutorialScan">Scan</string>
    <string name="tuturialSaveLogs">Save Logs</string>
    <string name="tutorialFolderApp">App Folder</string>
    <string name="tutorialfileCsv">CSV Files</string>
    <string name="tutorialReportText">On the menu there\'s an option to report data. If selected you can report the log files that you created to us, so that we can work to improve our algorithms</string>


    <string name="title_activity_realtime_line_chart">RealtimeLineChartActivity</string>

    <string name="saveChartImage">Save chart to Gallery</string>


</resources>
