<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="80dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:background="@drawable/ibeacon_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="50dp"
            android:text="IBeacon"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/ibeacon_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/device_name"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
            android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/major"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/major"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/minor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/minor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/power"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/battery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/battery"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/rssi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/rssi"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/distance"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/bodyLayout"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imageButton_save_log_ibeacon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:paddingLeft="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_save_black_48dp" />

                    <ImageButton
                        android:id="@+id/imageButton_stop_save_log_ibeacon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:paddingLeft="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/save_stop"
                        android:visibility="invisible" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView_save_log_ibeacon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/save_log_file"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>