<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:animateLayoutChanges="true"

    android:orientation="horizontal"
    android:weightSum="8">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:adjustViewBounds="true"

        android:src="@drawable/eddystone_logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">

        <!--
        <TextView
            android:id="@+id/namespace_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/namespace"/>
        -->
        <TextView
            android:id="@+id/instance_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/instance" />

        <!--
        <TextView
            android:id="@+id/url"
            android:text="@string/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/power"
            android:text="@string/tx_power_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/temperature"
            android:text="@string/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/battery_voltage"
            android:text="@string/battery_voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/pdu_count"
            android:text="@string/pdu_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        -->
        <TextView
            android:id="@+id/rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rssi" />
        <!--
        <TextView
            android:id="@+id/time_since_power_up"
            android:text="@string/time_since_power_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/telemetry_version"
            android:text="@string/telemetry_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            -->
        <TextView
            android:id="@+id/proximity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proximity"
            android:paddingBottom="10dp" />

    </LinearLayout>
</LinearLayout>
