<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingTop="80dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:background="@drawable/eddystone_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="40dp"
            android:text="EddyStone"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--  <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:orientation="horizontal"
          android:paddingBottom="20dp"
          android:paddingLeft="15dp"
          android:paddingTop="30dp">

          <TextView
              android:id="@+id/eddystone_name"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              android:layout_weight="1"
              android:text="@string/device_name"
              android:textSize="20sp" />

      </LinearLayout> -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/namespace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/namespace"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/instance_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/instance"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/txpower_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/tx_power_level"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/battery_voltage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/battery_voltage"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/eddystone_url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="@string/url"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/eddystone_rssi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/rssi"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/eddystone_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.27"
                    android:text="@string/distance"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/bodyLayout"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imageButton_save_log"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:paddingLeft="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_save_black_48dp" />

                    <ImageButton
                        android:id="@+id/imageButton_stop_save_log"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:paddingLeft="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/save_stop"
                        android:visibility="invisible" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView_save_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/save_log_file"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:paddingLeft="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_location_on_black_48dp"
                        android:id="@+id/imageButtonMarkLog"
                        android:visibility="invisible" />

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:paddingLeft="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_location_off_black_48dp"
                        android:id="@+id/imageButtonStopMarkLog"
                        android:visibility="invisible" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView_mark_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/save_log_file"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic"
                    android:visibility="invisible" />
            </LinearLayout>


            <!--   <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:paddingBottom="20dp"
                   android:paddingLeft="15dp">

                   <TextView
                       android:id="@+id/eddystone_proximity"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="left"
                       android:layout_weight="1"
                       android:text="@string/proximity"
                       android:textSize="16sp" />

                   <TextView
                       android:id="@+id/eddystone_temperature"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="right"
                       android:layout_weight="1"
                       android:text="@string/temperature"
                       android:textSize="16sp" />


               </LinearLayout> -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>